--- a/style.css
+++ b/style.css
@@ -156,3 +156,7 @@ dropdown css start here */
 
 
 /* hero section css start here */
+
+.accordion-content {
+    transition: max-height 0.3s ease-out, padding 0.3s ease;
+    }
